--- a/Ejercicio01/index.html
+++ b/Ejercicio01/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <style>
+        h1{
+          color: palevioletred;  
+        }
+    </style>
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Document</title>
 </head>
 <body>
     <h1 style="color: rgb(55, 85, 225)">Esto es un título h1</h1>
+    <h1>Otro título h1</h1>
 </body>
 </html>
