--- a/Ejercicio01/index.html
+++ b/Ejercicio01/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <style>
-        h1{
-          color: palevioletred;  
+        h1, h2{
+          color: palevioletred;
+          font-family: Helvetica, sans-serif;
+          font-size: 30px;
+          font-style: italic;
+          font-weight: 100;
+          text-align: center;
+          text-decoration: underline;
+/*          letter-spacing: 35px;*/
+/*          word-spacing: 70px;*/
+          text-transform: uppercase;
+          background: black;
+/*          font: 200 normal 50px font family;*/
         }
     </style>
-    <link rel="stylesheet" href="css/estilos.css">
+    <!--<link rel="stylesheet" href="css/estilos.css">-->
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: rgb(55, 85, 225)">Esto es un título h1</h1>
+    <!--<h1 style="color: rgb(55, 85, 225)">Esto es un título h1</h1>
+    Esto solo modifica este header, el style de ariba solo esta pagina y el css linkeado a todas las paginas qe lo linkeen-->
     <h1>Otro título h1</h1>
+    <h2>Otro título h2</h2>
 </body>
 </html>
