--- a/Ejercicio01/index.html
+++ b/Ejercicio01/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <style>
-        h1, h2{
+/*        h1, h2{
           color: palevioletred;
           font-family: Helvetica, sans-serif;
           font-size: 30px;
@@ -11,12 +11,17 @@
           font-weight: 100;
           text-align: center;
           text-decoration: underline;
-/*          letter-spacing: 35px;*/
-/*          word-spacing: 70px;*/
+          letter-spacing: 35px;
+          word-spacing: 70px;
           text-transform: uppercase;
           background: black;
-/*          font: 200 normal 50px font family;*/
-        }
+
+          font: 200 normal 50px font family;
+        }*/
+/*        body{
+            background-color: black;
+            background-image: url("images/fondo.jpg");
+        }*/
     </style>
     <!--<link rel="stylesheet" href="css/estilos.css">-->
     <title>Document</title>
@@ -26,5 +31,7 @@
     Esto solo modifica este header, el style de ariba solo esta pagina y el css linkeado a todas las paginas qe lo linkeen-->
     <h1>Otro título h1</h1>
     <h2>Otro título h2</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias labore nam, sunt culpa nulla maiores laudantium perspiciatis necessitatibus vel neque quia alias ab quo natus corporis nobis voluptatem! Amet, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur fugit aperiam corporis asperiores quisquam, recusandae et dignissimos tempora totam necessitatibus excepturi, atque perspiciatis nihil culpa ipsam? Amet, assumenda nihil.</p>
+
 </body>
 </html>
