--- a/Ejercicio01/index.html
+++ b/Ejercicio01/index.html
@@ -23,7 +23,7 @@
             background-image: url("images/fondo.jpg");
         }*/
         .vistoso{
-            background-color: greenyellow;
+            background-color: lightgray ;
             color: mediumpurple;
         }
 
@@ -34,6 +34,18 @@
             border-width: 15px;
             border-color: violet;
             border-style: groove;
+            padding: 30px;
+            margin: 30px;
+        }
+        *{
+            font-family: Helvetica, sans-serif;
+            color: blanchedalmond;
+        }
+        p span{
+            color: darkgoldenrod;
+        }
+        #mispan{
+            color:aquamarine; 
         }
     </style>
     <!--<link rel="stylesheet" href="css/estilos.css">-->
@@ -44,8 +56,9 @@
     Esto solo modifica este header, el style de ariba solo esta pagina y el css linkeado a todas las paginas qe lo linkeen-->
     <h1>Otro título h1</h1>
     <h2 class="vistoso">Otro título h2</h2>
-    <p class="vistoso">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias labore nam, sunt culpa nulla maiores laudantium perspiciatis necessitatibus vel neque quia alias ab quo natus corporis nobis voluptatem! Amet, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur fugit aperiam corporis asperiores quisquam, recusandae et dignissimos tempora totam necessitatibus excepturi, atque perspiciatis nihil culpa ipsam? Amet, assumenda nihil.</p>
+    <p class="vistoso">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias labore nam, sunt culpa nulla maiores laudantium perspiciatis necessitatibus vel neque quia alias ab quo natus corporis nobis voluptatem! Amet, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span>Itaque tenetur fugit aperiam corporis asperiores quisquam,</span> recusandae et dignissimos tempora totam necessitatibus excepturi, atque perspiciatis nihil culpa ipsam? Amet, assumenda nihil.</p>
     <p id="parrafoEspecial">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias labore nam, sunt culpa nulla maiores laudantium perspiciatis necessitatibus vel neque quia alias ab quo natus corporis nobis voluptatem! Amet, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur fugit aperiam corporis asperiores quisquam, recusandae et dignissimos tempora totam necessitatibus excepturi, atque perspiciatis nihil culpa ipsam? Amet, assumenda nihil.</p>
-    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores iure aperiam minus quos nulla porro ex obcaecati reprehenderit laudantium libero aspernatur quam architecto culpa, praesentium voluptate sint fuga dolor doloremque.</div>
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores iure aperiam minus quos nulla<span id="mispan"> porro ex obcaecati reprehenderit laudantium libero aspernatur quam architecto culpa, </span>praesentium voluptate sint fuga dolor doloremque.</div>
+
 </body>
 </html>
